--- a/index.ipynb
+++ b/index.ipynb
@@ -577,7 +577,9 @@
    "source": [
     "def derivative_at(list_of_terms, x_value, delta_x):\n",
     "    pass\n",
-    "\n"
+    "\n",
+    "def derivative_at(list_of_terms, x_value, delta_x):\n",
+    "    "
    ]
   },
   {
