Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -579,7 +579,7 @@
     "    pass\n",
     "\n",
     "def derivative_at(list_of_terms, x_value, delta_x):\n",
-    "    return delta_f(list_of_terms, x)"
+    "    return delta_f(list_of_terms, x_value, delta_x)"
    ]
   },
   {
