Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,21 +579,21 @@
     "    pass\n",
     "\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return delta_f(list_of_terms, x_value, delta_x) // delta_x"
+    "    return delta_f(list_of_terms, x_value, delta_x) / delta_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "4.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
