Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -571,11 +571,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def derivative_at(list_of_terms, x_value, delta_x):\n",
+    "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    pass\n",
     "\n",
     "def derivative_at(list_of_terms, x_value, delta_x):\n",
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "4.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
